--- a/Project4/bin/AndroidManifest.xml
+++ b/Project4/bin/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
@@ -19,11 +19,19 @@
 	    	</intent-filter>
 	    </service>
 
-        <activity android:name=".TimeLogMain"
+        <activity android:name=".activity.ProjectCardActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.gek.and.project4.activity.MainActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+	    		<action android:name="com.gek.and.project4.VIEWER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         
@@ -40,7 +48,7 @@
                   android:label="@string/menuSettings"
                   android:noHistory="true" 
                   android:exported="true"
-                  android:parentActivityName="com.gek.and.project4.TimeLogMain">
+                  android:parentActivityName="com.gek.and.project4.activity.MainActivity">
         </activity>
     </application>
 
