--- a/Project4/AndroidManifest.xml
+++ b/Project4/AndroidManifest.xml
@@ -4,53 +4,66 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="21" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name="com.gek.and.project4.app.Project4App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-	    <service android:name="Project4Service" android:enabled="true">
-	    	<intent-filter>
-	    		<action android:name="com.gek.and.project4.SERVICE"/>
-	    	</intent-filter>
-	    </service>
+        <service
+            android:name="Project4Service"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="com.gek.and.project4.SERVICE" />
+            </intent-filter>
+        </service>
 
-        <activity android:name=".activity.ProjectCardActivity"
-                  android:label="@string/app_name">
+        <activity
+            android:name=".activity.ProjectCardActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.gek.and.project4.activity.MainActivity"
-                  android:label="@string/app_name">
+        <activity
+            android:name="com.gek.and.project4.activity.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
-	    		<action android:name="com.gek.and.project4.VIEWER" />
+                <action android:name="com.gek.and.project4.VIEWER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".TimeLogViewer"
-                  android:label="@string/app_name"
-                  android:noHistory="true">
+        <activity
+            android:name=".TimeLogViewer"
+            android:label="@string/app_name"
+            android:noHistory="true" >
             <intent-filter>
-	    		<action android:name="com.gek.and.project4.VIEWER" />
+                <action android:name="com.gek.and.project4.VIEWER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-	    
-        <activity android:name=".SettingsActivity"
-                  android:label="@string/menuSettings"
-                  android:noHistory="true" 
-                  android:exported="true"
-                  android:parentActivityName="com.gek.and.project4.activity.MainActivity">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:label="@string/menuSettings"
+            android:noHistory="true"
+            android:parentActivityName="com.gek.and.project4.activity.MainActivity" >
         </activity>
-        <activity android:name="com.gek.and.project4.activity.ProjectDetailActivity"/>
-    </application>
+        <activity
+            android:name="com.gek.and.project4.activity.ProjectDetailActivity"
+            android:parentActivityName="com.gek.and.project4.activity.MainActivity" />
+        <activity android:name="com.gek.and.project4.activity.BookingListActivity" />
+        <activity android:name="com.gek.and.project4.activity.ColorPickerActivity" android:theme="@style/AppTheme.Dialog.Light"/>
+        </application>
 
 </manifest>
