--- a/Project4/project.properties
+++ b/Project4/project.properties
@@ -15,3 +15,4 @@ target=android-21
 android.library.reference.1=../../../workspace/adt/cardview
 android.library.reference.2=../../../workspace/adt/HoloColorPicker
 android.library.reference.3=../../../workspace/adt/GekLib
+android.library=true
